web: image buttons

--- a/web/static/web.html
+++ b/web/static/web.html
@@ -17,8 +17,8 @@
             <div id="current-clip">-</div>
         </div>
         <div id="controls" class="section">
-            <button id="pause" title="toggle pause">pause</button>
-            <button id="skip" title="skip the current clip">skip</button>
+            <button id="pause" title="toggle pause" class="img" style="--img:url('img/pause.svg')"></button>
+            <button id="skip" title="skip the current clip" class="img" style="--img:url('img/skip.svg')"></button>
         </div>
         <div id="history" class="section">
             <div class="title">Recent history:</div>
