--- a/web/static/web.html
+++ b/web/static/web.html
@@ -18,6 +18,7 @@
         </div>
         <div id="controls" class="section">
             <button id="pause" title="toggle pause" class="img" style="--img:url('img/pause.svg')"></button>
+            <button id="repeat" title="repeat current clip" class="img" style="--img:url('img/repeat.svg')"></button>
             <button id="skip" title="skip the current clip" class="img" style="--img:url('img/skip.svg')"></button>
         </div>
         <div id="history" class="section">
