HTML + CSS simplifications

--- a/web/static/web.html
+++ b/web/static/web.html
@@ -12,22 +12,22 @@
         <h1>py-radio</h1>
     </div>
     <div id="content">
-        <div id="now" class="section">
+        <div id="now">
             <div class="title">Now playing:</div>
             <div id="current-clip">-</div>
         </div>
-        <div id="controls" class="section">
+        <div id="controls">
             <button id="pause"  title="toggle pause"          class="img" style="--img:url('../img/pause.svg')" ></button>
             <button id="repeat" title="repeat current clip"   class="img" style="--img:url('../img/repeat.svg')"></button>
             <button id="skip"   title="skip the current clip" class="img" style="--img:url('../img/skip.svg')"  ></button>
         </div>
-        <div id="history" class="section">
+        <div id="history">
             <div class="title">Recent history:</div>
             <div id="history-clips"></div>
         </div>
-        <div id="stats" class="section"></div>
+        <div id="stats"></div>
     </div>
-    <div id="about" class="section">
+    <div id="about">
         The code for this project is
         <a href="https://github.com/tim-we/py-radio">available on GitHub</a>.
     </div>
