--- a/web/static/web.html
+++ b/web/static/web.html
@@ -17,9 +17,15 @@
             <div id="current-clip">-</div>
         </div>
         <div id="controls">
-            <button id="pause"  title="toggle pause"          class="img" style="--img:url('../img/pause.svg')" ></button>
-            <button id="repeat" title="repeat current clip"   class="img" style="--img:url('../img/repeat.svg')"></button>
-            <button id="skip"   title="skip the current clip" class="img" style="--img:url('../img/skip.svg')"  ></button>
+            <button id="pause" title="toggle pause">
+                <img src="static/img/pause.svg"/>
+            </button>
+            <button id="repeat" title="repeat current clip">
+                <img src="static/img/repeat.svg" />
+            </button>
+            <button id="skip" title="skip the current clip">
+                <img src="static/img/skip.svg" />
+            </button>
         </div>
         <div id="history">
             <div class="title">Recent history:</div>
