--- a/web/static/web.html
+++ b/web/static/web.html
@@ -26,6 +26,9 @@
             <button id="skip" title="skip the current clip">
                 <img src="static/img/skip.svg" />
             </button>
+            <button id="song-list-button" title="song list">
+                <img src="static/img/list.svg" />
+            </button>
         </div>
         <div id="history">
             <div class="title">Recent history:</div>
