song list modal

--- a/web/static/web.html
+++ b/web/static/web.html
@@ -40,5 +40,14 @@
         The code for this project is
         <a href="https://github.com/tim-we/py-radio">available on GitHub</a>.
     </div>
+    <div id="song-list-container">
+        <div id="song-list-modal">
+            <div id="song-list-controls">
+                <input id="song-filter" type="text" placeholder="filter" />
+                <button id="song-list-close"></button>
+            </div>
+            <div id="song-list"></div>
+        </div>
+    </div>
 </body>
 </html>
