--- a/web/static/web.html
+++ b/web/static/web.html
@@ -26,6 +26,9 @@
             <button id="skip" title="skip the current clip">
                 <img src="static/img/skip.svg" />
             </button>
+            <button id="song-list-button" title="song list">
+                <img src="static/img/list.svg" />
+            </button>
         </div>
         <div id="history">
             <div class="title">Recent history:</div>
@@ -36,6 +39,15 @@
     <div id="about">
         The code for this project is
         <a href="https://github.com/tim-we/py-radio">available on GitHub</a>.
+    </div>
+    <div id="song-list-container">
+        <div id="song-list-modal">
+            <div id="song-list-controls">
+                <input id="song-filter" type="text" placeholder="filter" />
+                <button id="song-list-close"></button>
+            </div>
+            <div id="song-list"></div>
+        </div>
     </div>
 </body>
 </html>
