web: add favicon

--- a/web/static/web.html
+++ b/web/static/web.html
@@ -6,6 +6,13 @@
     <title>py-radio web interface</title>
     <link rel="stylesheet" href="static/css/web.css">
     <script type="module" src="static/js/web.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
+    <link rel="mask-icon" href="/static/img/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div id="header">
