--- a/web/static/web.html
+++ b/web/static/web.html
@@ -6,13 +6,17 @@
     <title>py-radio web interface</title>
     <link rel="stylesheet" href="static/css/web.css">
     <script type="module" src="static/js/web.js"></script>
+
     <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
     <link rel="manifest" href="/static/site.webmanifest">
-    <link rel="mask-icon" href="/static/img/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="/static/img/safari-pinned-tab.svg" color="#437de2">
+    <meta name="apple-mobile-web-app-title" content="py-radio">
+    <meta name="application-name" content="py-radio">
+    <meta name="msapplication-TileColor" content="#4a5cff">
     <link rel="shortcut icon" href="/static/img/favicon.ico">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#1e415e">
 </head>
 <body>
     <div id="header">
