Add logo to web interface

--- a/web/static/web.html
+++ b/web/static/web.html
@@ -20,7 +20,8 @@
 </head>
 <body>
     <div id="header">
-        <h1>py-radio</h1>
+        <img alt="logo" src="static/img/icon.svg" />
+        <span>py-radio</span>
     </div>
     <div id="content">
         <div id="now">
