Implement song list modal

--- a/web/static/web.html
+++ b/web/static/web.html
@@ -20,15 +20,6 @@
 <body>
     <div id="root"></div>
     <div id="modal-portal"></div>
-    <!--<div id="song-list-container">
-        <div id="song-list-modal">
-            <div id="song-list-controls">
-                <input id="song-filter" type="text" placeholder="filter" />
-                <button id="song-list-close"></button>
-            </div>
-            <div id="song-list"></div>
-        </div>
-    </div>-->
-    <script src="/static/js/web-react.js"></script>
+    <script src="/static/web.js"></script>
 </body>
 </html>
